demo-app/api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
  selector:
    app: api
    deployment: api
