demo-app/api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: api
    weight: 100
  wildcardPolicy: None
